--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/main-icon.png",
+    "icon": "./assets/app-icon.png",
     "splash": {
       "image": "./assets/main-splash.png",
       "resizeMode": "cover"
