--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^9.0.0",
+    "crypto-random-hex": "^1.0.0",
     "expo": "^32.0.0",
     "firebase": "^5.8.5",
     "native-base": "^2.12.0",
